--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "serve": "node server"
   },
   "keywords": [],
-  "author": "",
+  "authors": [
+    {
+      "name": "Rakesh Kohali"
+    },
+    {
+      "name": "Labham Jain"
+    }
+  ],
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
